--- a/JwtAuthentication/appsettings.json
+++ b/JwtAuthentication/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=sqlite.db"
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
