added login logic

--- a/JwtAuthentication/appsettings.json
+++ b/JwtAuthentication/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Authentication": {
+    "Key":  "TEST_PRIVATE_KEY_DONT_SHARE_TEST_PRIVATE_KEY_DONT_SHARE_TEST_PRIVATE_KEY_DONT_SHARE"
+  },
+  
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=sqlite.db"
   },
