added refresh token logic

--- a/JwtAuthentication/appsettings.json
+++ b/JwtAuthentication/appsettings.json
@@ -1,6 +1,8 @@
 {
   "Authentication": {
-    "Key":  "TEST_PRIVATE_KEY_DONT_SHARE_TEST_PRIVATE_KEY_DONT_SHARE_TEST_PRIVATE_KEY_DONT_SHARE"
+    "Key":  "TEST_PRIVATE_KEY_DONT_SHARE_TEST_PRIVATE_KEY_DONT_SHARE_TEST_PRIVATE_KEY_DONT_SHARE",
+    "TokenLifetimeMin": 10, 
+    "RefreshTokenLifetimeDays": 5
   },
   
   "ConnectionStrings": {
