created sql-server container

--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "ConnectionStrings": {
+    "SQLServer": "Server=localhost,1433; Database=Authentication_sample; User=SA; Password=Dev_password@1; trustServerCertificate=true;"
   }
 }
