added login logic

--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -5,8 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
+    
   "ConnectionStrings": {
     "SQLServer": "Server=localhost,1433; Database=Authentication_sample; User=SA; Password=Dev_password@1; trustServerCertificate=true;"
+  },
+    
+  "Authentication": {
+    "Key": "TEST_PRIVATE_KEY_DONT_SHARE_TEST_PRIVATE_KEY_DONT_SHARE_TEST_PRIVATE_KEY_DONT_SHARE",
+    "TokenLifetimeMin": 10,
+    "RefreshTokenLifetimeDays": 5
   }
 }
