added support for docker containers

--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
     
   "ConnectionStrings": {
-    "SQLServer": "Server=localhost,1433; Database=Authentication_sample; User=SA; Password=Dev_password@1; trustServerCertificate=true;"
+    "SQLServer": "Server=database,1433; Database=Authentication_sample; User=SA; Password=Dev_password@1; trustServerCertificate=true;"
   },
     
   "Authentication": {
